tests/semantic/decl_collection/snapshots/r#mod__semantic__global_decl_collection__struct_collection__complex_struct_collection.snap
---
source: tests/semantic/decl_collection/struct_collection.rs
expression: "&test_ctx.prog_ctx.type_registry"
---
structs:
  0:
    name: Type
    fields:
      - name: float
        value_type:
          Primitive: Float
        def_val:
          kind:
            FloatLiteral: 5.3
          value_type:
            Primitive: Float
          range:
            start: 0
            end: 0
        range:
          start: 0
          end: 0
      - name: bool
        value_type:
          Primitive: Bool
        def_val:
          kind:
            BoolLiteral: false
          value_type:
            Primitive: Bool
          range:
            start: 0
            end: 0
        range:
          start: 0
          end: 0
      - name: int
        value_type:
          Primitive: Int
        def_val:
          kind:
            IntLiteral: 5
          value_type:
            Primitive: Int
          range:
            start: 0
            end: 0
        range:
          start: 0
          end: 0
    indices:
      bool: 1
      float: 0
      int: 2
    field_offsets:
      - 0
      - 4
      - 8
    total_size: 12
    alignment: 4
    range:
      start: 0
      end: 0
name_to_id:
  ? - 0
    - Type
  : 0
array_id_to_decl: {}
decl_to_array_id: {}
alias_to_type: {}
next_struct_id: 1
next_array_id: 0
