tests/semantic/decl_collection/snapshots/r#mod__semantic__global_decl_collection__struct_collection__single_field_collection.snap
---
source: tests/semantic/decl_collection/struct_collection.rs
expression: "&test_ctx.prog_ctx.type_registry"
---
structs:
  0:
    name: Type
    fields:
      - name: field
        value_type:
          Primitive: Float
        def_val:
          kind:
            FloatLiteral: 5.3
          value_type:
            Primitive: Float
          range:
            start: 0
            end: 0
        range:
          start: 0
          end: 0
    indices:
      field: 0
    field_offsets:
      - 0
    total_size: 4
    alignment: 4
    range:
      start: 0
      end: 0
name_to_id:
  ? - 0
    - Type
  : 0
array_id_to_decl: {}
decl_to_array_id: {}
alias_to_type: {}
next_struct_id: 1
next_array_id: 0
